--- a/interview/tencent/demo/animate-test.html
+++ b/interview/tencent/demo/animate-test.html
@@ -136,10 +136,24 @@
             transform: none;
           }
         }
-        .a {
+        div {
             width: 100px;
             height: 100px;
             position: absolute;
-            left: 50%;
-            top: 50%;
-        }</style></head><body><div class="a"></div></body></html>
+            background: #000;
+            left: 40%;
+            top: 40%;
+        }
+        .animated {
+          -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+          -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
+        }</style></head><body><div></div><button>click</button><script>var aEle = document.getElementsByClassName('a')[0],
+            btn = document.getElementsByTagName('button')[0];
+        btn.addEventListener('click', function() {
+            aEle.className = 'bounceInDown animated';
+            setTimeout(function() {
+                aEle.className = '';
+            }, 1000)
+        })</script></body></html>
