--- a/interview/tencent/index.html
+++ b/interview/tencent/index.html
@@ -10,4 +10,17 @@
         }
         li {
             margin-top: 10px;
-        }</style></head><body><main role="main" class="main-interview-in-zhihu"><i></i><article><h1>腾讯CDC页面重构工程师(外包岗)</h1><article><section><h2>题目：实现一个微信移动端活动页面。</h2></section><section><h2>解答：<a href="http://portfolio.liuzhexiao.com/interview/tencent/demo/" target="_blank">Demo</a></h2><div><h3>一些说明：</h3><div><ul><li>布局：采用居中定位，适配各种尺寸的手机机型。</li><li>JS：使用了 <a href="http://www.idangero.us/swiper/" target="_blank">swiper.js</a> 这个移动端 slide 框架。</li><li>动画：使用了 <a href="https://daneden.github.io/animate.css/" target="_blank">Animate.css</a> 这个 CSS3 动效库。</li><li>性能：常规的 CSS/JS 文件合并，CSS/JS/HTML/images 文件压缩；图片使用七牛提供的 CDN 功能；首屏以外的图片采用 CSS sprite 合并。</li><li>可以考虑的改进：五星档案页(黄色那页)里面的折线处可以考虑使用 SVG 制作动画；swiper.min.js 有 67kb，还是有点大，可以抽离出自己需要使用的部分，或者自己之后写一个更加轻量的；「更多评语」和「X」两处按钮可以做一个小的按键动画；移动端 click 事件响应过慢，可考虑优化，可参考<a href="http://www.cnblogs.com/yexiaochai/p/3462657.html" target="_blank">这篇</a>。</li><li>其他：PSD 文件里面有些字体丢失，没有去找回(因为感觉不是答题的重点，当然实际工作中肯定是会去找回的)。</li></ul></div></div></section></article></article></main></body></html>
+        }
+        .h3Bottom {
+            margin-top: 20px;
+        }
+        .ulSmall {
+            margin-left: 30px;
+        }
+        .ulSmall > li {
+            font-size: 12px;
+            margin-top: 3px;
+        }
+        section > div {
+            line-height: 25px;
+        }</style></head><body><main role="main" class="main-interview-in-zhihu"><i></i><article><h1>腾讯CDC页面重构工程师(外包岗)-改进版</h1><article><section><h2>题目：实现一个微信移动端活动页面。</h2></section><section><h2>解答：<a href="http://portfolio.liuzhexiao.com/interview/tencent/demo/" target="_blank">Demo</a></h2><div><h3>一些说明：</h3><div><ul><li>简述：五星档案移动端宣传页面，第二版。</li><li>改进点：为了节省时间(0.0)，又加上已经做了首页 loading 等待页面，所以没有做 CSS sprite 处理；移动端 click 事件响应过慢，可考虑优化，可参考<a href="http://www.cnblogs.com/yexiaochai/p/3462657.html" target="_blank">这篇</a>；loading 页面可以加上进度数字，可以考虑使用 <a href="https://github.com/HubSpot/pace">pace.js</a>。</li></ul></div></div><div><h3 class="h3Bottom">补充说明：</h3><div>前辈你好，之前的聊天中你有提到觉得我的简历上只写了一个自己网站项目，觉得项目的数量太少。其实我除了自己这个网站外也做过其他 Web 相关的项目，具体你可以看<a href="http://portfolio.liuzhexiao.com/web/" target="_blank">这里</a>，但是出于以下原因并没有放在简历里：<ul class="ulSmall"><li>里面的几个网站所用到的技术栈没有特别大的差异；</li><li>其他项目之前做完后就再也没有维护，而我自己的这个网站是我一直在保持重构优化的，同时也是我自己试验新技术/工具的试验田。</li></ul>小小再解释一下 0.0。</div></div></section></article></article></main></body></html>
