--- a/about/introduce/index.html
+++ b/about/introduce/index.html
@@ -1,176 +1,8 @@
-<!doctype html>
-<html lang="en">
-
-	<head>
-		<meta charset="utf-8">
-
-		<title>Zhexiao Liu</title>
-
-		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
-		<meta name="author" content="Hakim El Hattab">
-
-		<meta name="apple-mobile-web-app-capable" content="yes" />
-		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
-
-		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/white.css" id="theme">
-
-		<!-- Code syntax highlighting -->
-		<link rel="stylesheet" href="lib/css/zenburn.css">
-		<link rel="stylesheet" href="css/lzx.css">
-
-		<!-- Printing and PDF exports -->
-		<script>
-			var link = document.createElement( 'link' );
+<!doctype html><html lang="en"><head><meta charset="utf-8"><title>Zhexiao Liu</title><meta name="description" content="A framework for easily creating beautiful presentations using HTML"><meta name="author" content="Hakim El Hattab"><meta name="apple-mobile-web-app-capable" content="yes"><meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no,minimal-ui"><link rel="stylesheet" href="css/reveal.css"><link rel="stylesheet" href="css/theme/white.css" id="theme"><link rel="stylesheet" href="lib/css/zenburn.css"><link rel="stylesheet" href="css/lzx.css"><script>var link = document.createElement( 'link' );
 			link.rel = 'stylesheet';
 			link.type = 'text/css';
 			link.href = window.location.search.match( /print-pdf/gi ) ? 'css/print/pdf.css' : 'css/print/paper.css';
-			document.getElementsByTagName( 'head' )[0].appendChild( link );
-		</script>
-
-		<!--[if lt IE 9]>
-		<script src="lib/js/html5shiv.js"></script>
-		<![endif]-->
-	</head>
-
-	<body>
-
-		<div class="reveal">
-
-			<!-- Any section element inside of this container is displayed as a slide -->
-			<div class="slides">
-				<section>
-					<section>
-						<img id="img-portrait" src="img/portrait.jpg" alt="">
-						<h2>刘哲潇</h2>
-						<p class="fragment">
-							<small>杭州 / 180cm(身高) / 单身 / 直男 / 闷骚 / 游泳</small>
-						</p>
-					</section>
-				</section>
-
-				<section>
-					<section>
-						<ul>
-							<li>2010-2014 &nbsp;&nbsp;&nbsp;&nbsp;浙江大学生物工程专业</li>
-							<li class="fragment">2012-2014 &nbsp;&nbsp;&nbsp;&nbsp;打算转专业，开始学习设计</li>
-						</ul>
-					</section>
-					<section>
-						<img src="img/eye.jpg" alt="">
-					</section>
-					<section>
-						<img src="img/longmen.jpg" alt="">
-					</section>
-					<section>
-						<img src="img/etong.jpg" alt="">
-					</section>
-					<section>
-						<img src="img/etong-2.jpg" alt="">
-					</section>
-					<section>
-						<img class="img-vertical" src="img/xihu.jpg" alt="">
-					</section>
-					<section>
-						<img src="img/mondrian-1.jpg" alt="">
-					</section>
-					<section>
-						<img src="img/mondrian-2.jpg" alt="">
-					</section>
-					<section>
-						<img src="img/monet.jpg" alt="">
-					</section>
-					<section>
-						<img class="img-vertical" src="img/poster-1.jpg" alt="">
-					</section>
-					<section>
-						<img class="img-vertical" src="img/poster-2.jpg" alt="">
-					</section>
-					<section>
-						<img class="img-vertical" src="img/poster-3.jpg" alt="">
-					</section>
-					<section>
-						<img src="img/birds.jpg" alt="">
-					</section>
-					<section>
-						<a href="http://portfolio.liuzhexiao.com/">http://portfolio.liuzhexiao.com/</a>
-					</section>
-				</section>
-
-				<section>
-					<section>
-						<ul>
-							<li>2014-2014 &nbsp;&nbsp;&nbsp;&nbsp;网页设计课</li>
-						</ul>
-					</section>
-					<section>
-						<section>
-							<img src="img/bootstrap.png" alt="">
-							<ul>
-								<li class="fragment">能够自己实现，感觉很爽。</li>
-								<li class="fragment">好像也不是很难嘛?<span class="fragment">(很傻很天真)</span></li>
-							</ul>
-						</section>
-					</section>
-				</section>
-
-				<section>
-					<section>
-						<ul>
-							<li>2014-2015 &nbsp;&nbsp;&nbsp;&nbsp;自学前端(入坑)</li>
-						</ul>
-					</section>
-					<section>
-						<h2>前端，没那么容易。</h2>
-					</section>
-					<section>
-						<ul>
-							<li class="fragment">HTML：语义化。</li>
-							<li class="fragment">CSS：一个垂直居中有10多种方案。</li>
-							<li class="fragment">JS：闭包? 作用域? 面向对象? 继承? ES5 还没写顺手，ES6 来了。</li>
-							<li class="fragment">工程实践：性能优化、代码可维护性、各种兼容问题。</li>
-							<li class="fragment">各种前端新工具(Sass/PostCSS、Grunt/Gulp、Browserify/Webpack...)、新框架(Angular/Vue/React...)</li>
-							<li class="fragment">Node.js相关。</li>
-							<li class="fragment">计算机基础知识：算法、数据结构、计算机网络，不学总是心虚。</li>
-							<li class="fragment">很多不知道/看不懂的黑科技。</li>
-							<li class="fragment">等等等等....</li>
-						</ul>
-					</section>
-				</section>
-
-				<section>
-					<section>
-						<ul>
-							<li>2015.09.14 - 现在</li>
-						</ul>
-					</section>
-					<section>
-						<h2>终于找到组织了。</h2>
-						<img class="fragment" src="img/potiweixiao.png" alt="">
-					</section>
-				</section>
-
-				<section>
-					<section class="qa">
-						<p>if (Q&amp;A) {</p>
-						<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Q&amp;A;</p>
-						<p>}</p>
-						<p>console.log("Thanks for watching!");</p>
-					</section>
-				</section>
-
-			</div>
-
-		</div>
-
-		<script src="lib/js/head.min.js"></script>
-		<script src="js/reveal.js"></script>
-
-		<script>
-
-			// Full list of configuration options available at:
+			document.getElementsByTagName( 'head' )[0].appendChild( link );</script><!--[if lt IE 9]><script src="lib/js/html5shiv.js"></script><![endif]--></head><body><div class="reveal"><div class="slides"><section><section><img id="img-portrait" src="img/portrait.jpg" alt=""><h2>刘哲潇</h2><p class="fragment"><small>杭州 / 180cm(身高) / 单身 / 直男 / 闷骚 / 游泳 / 看书</small></p></section></section><section><section><ul><li>2010-2014 &nbsp;&nbsp;&nbsp;&nbsp;浙江大学生物工程专业</li><li class="fragment">2012-2014 &nbsp;&nbsp;&nbsp;&nbsp;打算转专业，开始学习设计</li></ul></section><section><img src="img/eye.jpg" alt=""></section><section><img src="img/longmen.jpg" alt=""></section><section><img src="img/etong.jpg" alt=""></section><section><img src="img/etong-2.jpg" alt=""></section><section><img class="img-vertical" src="img/xihu.jpg" alt=""></section><section><img src="img/mondrian-1.jpg" alt=""></section><section><img src="img/mondrian-2.jpg" alt=""></section><section><img src="img/monet.jpg" alt=""></section><section><img class="img-vertical" src="img/poster-1.jpg" alt=""></section><section><img class="img-vertical" src="img/poster-2.jpg" alt=""></section><section><img class="img-vertical" src="img/poster-3.jpg" alt=""></section><section><img src="img/birds.jpg" alt=""></section><section><a href="http://portfolio.liuzhexiao.com/">http://portfolio.liuzhexiao.com/</a></section></section><section><section><ul><li>2014-2014 &nbsp;&nbsp;&nbsp;&nbsp;网页设计课</li></ul></section><section><section><img src="img/bootstrap.png" alt=""><ul><li class="fragment">能够自己实现，感觉很爽。</li><li class="fragment">好像也不是很难嘛?<span class="fragment">(很傻很天真)</span></li></ul></section></section></section><section><section><ul><li>2014-2015 &nbsp;&nbsp;&nbsp;&nbsp;自学前端(入坑)</li></ul></section><section><h2>前端，没那么容易。</h2></section><section><ul><li class="fragment">HTML：语义化。</li><li class="fragment">CSS：一个垂直居中有10多种方案。</li><li class="fragment">JS：闭包? 作用域? 面向对象? 继承? 同步/异步? ES5 还没写顺手，ES6 来了。</li><li class="fragment">工程实践：性能优化、代码可维护性、各种兼容问题。</li><li class="fragment">各种前端新工具(Sass/PostCSS、Grunt/Gulp、Browserify/Webpack...)、新框架(Angular/Vue/React...)</li><li class="fragment">Node.js相关。</li><li class="fragment">计算机基础知识：算法、数据结构、计算机网络，不学总是心虚。</li><li class="fragment">很多不知道/看不懂的黑科技。</li><li class="fragment">等等等等....</li></ul></section></section><section><section><ul><li>2015.09.14 - 现在</li></ul></section><section><h2>终于找到组织了。</h2><img class="fragment" src="img/potiweixiao.png" alt=""></section></section><section><section class="qa"><p>if (Q&amp;A) {</p><p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Q&amp;A;</p><p>}</p><p>console.log("Thanks for watching!");</p></section></section></div></div><script src="lib/js/head.min.js"></script><script src="js/reveal.js"></script><script>// Full list of configuration options available at:
 			// https://github.com/hakimel/reveal.js#configuration
 			Reveal.initialize({
 				controls: true,
@@ -189,9 +21,4 @@
 					{ src: 'plugin/zoom-js/zoom.js', async: true },
 					{ src: 'plugin/notes/notes.js', async: true }
 				]
-			});
-
-		</script>
-
-	</body>
-</html>
+			});</script></body></html>
