--- a/50x.html
+++ b/50x.html
@@ -12,8 +12,8 @@
     <link rel="shortcut icon" href="http://7xlcqv.com1.z0.glb.clouddn.com/me.ico">
 
     <title>LZX | Error Page</title>
-    <link rel="stylesheet" href="css/style.min.css">
-    <script src="js/lzx.analytics.js"></script>
+    <link rel="stylesheet" href="http://portfolio.liuzhexiao.com/css/style.min.css">
+    <script src="http://portfolio.liuzhexiao.com/js/lzx.analytics.js"></script>
 
 </head>
 
