--- a/html/about/resume/index.html
+++ b/html/about/resume/index.html
@@ -37,7 +37,7 @@
             <h1>刘哲潇</h1>
             <blockquote>
                 <p>性别: 男 / 电话: (+86)15868879000 / 家乡: 浙江杭州</p>
-                <p>邮箱: liuzhexiao1022@gmail.com 61978828@qq.com</p>
+                <p>邮箱: liuzhexiao1022@gmail.com && 61978828@qq.com</p>
             </blockquote>
 
             <article>
@@ -54,7 +54,7 @@
                             <p>浙江大学化学工程与生物工程学系-生物工程专业。</p>
                             <p>决定往设计方向发展，并开始通过各种途径学习设计。</p>
                             <p>在网页设计课上第一次接触前端，之后自学。</p>
-                            <p>腾讯-CDC-前端/重构(外包岗)</p>
+                            <p>腾讯-CDC-前端(外包岗，重构[HTML+CSS]为主)</p>
                         </div>
                     </div>
                 </section>
@@ -141,7 +141,7 @@
                         </ul>
                         <h3><a href="https://demo.cdc.im/thorliu/process" target="_blank">重构索引表(个人)</a></h3>
                         <ul>
-                            <li>简述：读取页面数据生成的一张索引表，有利于项目组成员查看重构工作进度。</li>
+                            <li>简述：该项目通过读取页面数据生成一张索引表，有利于项目组成员查看重构工作进展。</li>
                             <li>功能描述：自定义颜色、根据进度值调整页面相关属性、自动生成二维码、页面预览等。</li>
                         </ul>
                         <h3>一套重构工作流(工作/个人)</h3>
@@ -151,7 +151,7 @@
                         </ul>
                         <h3>其他(工作)</h3>
                         <ul>
-                            <li>一些H5：<a href="https://github.com/lzx1022/portfolio-of-lzx" target="_blank">中秋运营活动</a> / <a href="https://demo.cdc.im/thorliu/H5/boss_newyear_2016/process.html" target="_blank">总办新春祝福</a></li>
+                            <li>一些H5：<a href="https://demo.cdc.im/thorliu/H5/boss_newyear_2016/process.html" target="_blank">中秋运营活动</a> / <a href="https://demo.cdc.im/thorliu/H5/boss_newyear_2016/process.html" target="_blank">总办新春祝福</a></li>
                             <li><a href="https://demo.cdc.im/thorliu/identity-verify/process.html" target="_blank">TEG - 安平 - QQ安全中心验证流程改版 - 重构页</a></li>
                             <li><a href="https://demo.cdc.im/ocean/tml/html/" target="_blank">TEG - 内搜 - 机智2.0 - 重构页</a></li>
                             <li>一些零碎的走查修改、补充页面的工作。(都是以重构为主)</li>
@@ -164,15 +164,15 @@
                         <ul>
                             <li>简述：一个用来展示自己作品的静态页面，暂时放在 GitHub Page 上；适配 iPhone；绝大部分页面交互使用原生JS编写。</li>
                         </ul>
-                        <h3><a href="http://portfolio.liuzhexiao.com/interview/tencent/demo/" target="_blank">五星标杆(个人)</a></h3>
+                        <h3><a href="http://portfolio.liuzhexiao.com/html/interview/tencent/demo/" target="_blank">五星标杆(个人)</a></h3>
                         <ul>
                             <li>简述：一个H5的活动推广页。</li>
                         </ul>
-                        <h3><a href="http://portfolio.liuzhexiao.com/web/components/" target="_blank">原生 JS 组件(个人)</a></h3>
+                        <h3><a href="http://portfolio.liuzhexiao.com/html/web/components/" target="_blank">原生 JS 组件(个人)</a></h3>
                         <ul>
                             <li>简述：没有依赖的原生 JS 组件库，用来锻炼原生 JS 基础，目前数量不多。</li>
                         </ul>
-                        <h3>Web for <a href="https://github.com/lzx1022/portfolio-of-lzx" target="_blank">Leo</a> / <a href="http://portfolio.liuzhexiao.com/web/leo/" target="_blank">Konsatoshi</a> (均为个人)</h3>
+                        <h3>Web for <a href="http://portfolio.liuzhexiao.com/html/web/leo/" target="_blank">Leo</a> / <a href="http://portfolio.liuzhexiao.com/html/web/konsatoshi/" target="_blank">Konsatoshi</a> (均为个人)</h3>
                         <ul>
                             <li>简述：2 个早期做的静态网站。</li>
                         </ul>
@@ -208,7 +208,7 @@
 
                     <h2>设计作品</h2>
                     <div>
-                        <h3>平面/UI 看<a href="http://portfolio.liuzhexiao.com/ui/" target="_blank">这里</a>，绘画看<a href="http://portfolio.liuzhexiao.com/paint/" target="_blank">这里</a>。</h3>
+                        <h3>平面/UI 看<a href="http://portfolio.liuzhexiao.com/html/ui/" target="_blank">这里</a>，绘画看<a href="http://portfolio.liuzhexiao.com/html/paint/" target="_blank">这里</a>。</h3>
                     </div>
                 </section>
 
@@ -269,17 +269,17 @@
                 <section class="wish">
                     <h2>求职意愿</h2>
                     <div>
-                        asasas
+                        来 CDC 后从事的工作主要以重构(HTML+CSS)为主，希望能够谋求一份更加「前端」、更加有挑战的工作，能够更多地锻炼 JS 的能力，甚至包括一些后端知识。
                     </div>
                 </section>
 
 
-                <section>
-                    <h2>主要缺陷</h2>
-                    <div>
-                        JS 缺乏足够的实践经验，后端知识不足。
-                    </div>
-                </section>
+                <!--                     <section>
+                        <h2>主要缺陷</h2>
+                        <div>
+                            JS 缺乏足够的实践经验，后端知识不足。
+                        </div>
+                    </section> -->
 
                 <!--                     <section>
                         <h2>为什么选择做一个前端</h2>
