--- a/html/about/resume/index.html
+++ b/html/about/resume/index.html
@@ -134,7 +134,7 @@
                         <ul>
                             <li>简述：本人主要负责本次TSRC官网改版的重构工作。(部分页面组件的JS部分经过沟通由配合的开发同学完成)</li>
                         </ul>
-                        <h3>部分 <a href="http://www.dcloud.oa.com/" target="_blank">设计云</a> 需求(工作)</h3>
+                        <h3>部分 <a href="http://dcloud.oa.com/" target="_blank">设计云</a> 需求(工作)</h3>
                         <ul>
                             <li>简述：设计云是CDC研发小组的一款优化设计研发流程的内部产品。</li>
                             <li>个人参与情况：编写邮件模板、调整页面功能等。这个项目的需求以前端为主，但是本人参与的时间较短(不足一个月)。</li>
@@ -144,14 +144,14 @@
                             <li>简述：该项目通过读取页面数据生成一张索引表，有利于项目组成员查看重构工作进展。</li>
                             <li>功能描述：自定义颜色、根据进度值调整页面相关属性、自动生成二维码、页面预览等。</li>
                         </ul>
-                        <h3>一套重构工作流(工作/个人)</h3>
-                        <ul>
-                            <li>简述：根据业务特点，利用 gulp 及相关插件提高重构效率的一套工作流。</li>
-                            <li>功能描述：</li>
-                        </ul>
+                        <!--                             <h3>一套重构工作流(工作/个人)</h3>
+                            <ul>
+                                <li>简述：根据业务特点，利用 gulp 及相关插件提高重构效率的一套工作流。</li>
+                                <li>功能描述：</li>
+                            </ul> -->
                         <h3>其他(工作)</h3>
                         <ul>
-                            <li>一些H5：<a href="https://demo.cdc.im/thorliu/H5/boss_newyear_2016/process.html" target="_blank">中秋运营活动</a> / <a href="https://demo.cdc.im/thorliu/H5/boss_newyear_2016/process.html" target="_blank">总办新春祝福</a></li>
+                            <li>一些H5：<a href="https://demo.cdc.im/thorliu/H5/H5_mid-autumn-send-Q-coins/" target="_blank">中秋运营活动</a> / <a href="https://demo.cdc.im/thorliu/H5/boss_newyear_2016/process.html" target="_blank">总办新春祝福</a></li>
                             <li><a href="https://demo.cdc.im/thorliu/identity-verify/process.html" target="_blank">TEG - 安平 - QQ安全中心验证流程改版 - 重构页</a></li>
                             <li><a href="https://demo.cdc.im/ocean/tml/html/" target="_blank">TEG - 内搜 - 机智2.0 - 重构页</a></li>
                             <li>一些零碎的走查修改、补充页面的工作。(都是以重构为主)</li>
