--- a/html/interview/tencent/demo/index.html
+++ b/html/interview/tencent/demo/index.html
@@ -11,7 +11,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <title>LZX | Interview | Tencent</title>
     <link rel="shortcut icon" href="http://7xlcqv.com1.z0.glb.clouddn.com/me.ico">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body>
