--- a/html/about/resume/index.html
+++ b/html/about/resume/index.html
@@ -82,7 +82,7 @@
                             <p><strong>JS</strong></p>
                         </div>
                         <div>
-                            <p>认真阅读过《JS 高级程序设计》等书籍，能够使用原生 ECMAScript 5 完成基本的页面任务，熟悉 jQuery；了解部分 ECMAScript 6 新语法。</p>
+                            <p>认真阅读过《JS 高级程序设计》(主要章节)等书籍，能够使用原生 ECMAScript 5 完成基本的页面任务，熟悉 jQuery；了解部分 ECMAScript 6 新语法。</p>
                         </div>
                     </div>
                     <div>
