--- a/html/about/resume/index.html
+++ b/html/about/resume/index.html
@@ -53,7 +53,7 @@
                         <div>
                             <p>浙江大学化学工程与生物工程学系-生物工程专业。</p>
                             <p>决定往设计方向发展，并开始通过各种途径学习设计。</p>
-                            <p>在网页设计课上第一次接触前端，之后自学。</p>
+                            <p>在网页设计课上第一次接触前端，之后业余时间自学。</p>
                             <p>腾讯-CDC-前端(外包岗，重构[HTML+CSS]为主)</p>
                         </div>
                     </div>
