[*] 修改 footer 「LZX」的链接地址到 about 页；about 页，去掉「豆瓣」链接

--- a/html/ixd/processing/index.html
+++ b/html/ixd/processing/index.html
@@ -103,7 +103,7 @@
         <div></div>
         <div>
             <p>
-                Copyright&copy;2014-2015 &amp; Built by <a href="/" target="_blank">LZX</a> &amp; Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a> &amp; Design inspired by <a href="http://themeforest.net/item/hoarder-responsive-wordpress-blog-theme/full_screen_preview/2919551/"
+                Copyright&copy;2014-2015 &amp; Built by <a href="http://portfolio.liuzhexiao.com/html/about/" target="_blank">LZX</a> &amp; Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a> &amp; Design inspired by <a href="http://themeforest.net/item/hoarder-responsive-wordpress-blog-theme/full_screen_preview/2919551/"
                     target="_blank">Hoarder</a>
             </p>
         </div>
