--- a/html/about/resume/index.html
+++ b/html/about/resume/index.html
@@ -54,7 +54,7 @@
                             <p>浙江大学化学工程与生物工程学系-生物工程专业。</p>
                             <p>决定往设计方向发展，并开始通过各种途径学习设计。</p>
                             <p>在网页设计课上第一次接触前端，之后业余时间自学。</p>
-                            <p>腾讯-CDC-前端(外包岗，重构[HTML+CSS]为主)</p>
+                            <p>腾讯-CDC-前端(外包岗)</p>
                         </div>
                     </div>
                 </section>
@@ -122,7 +122,7 @@
                             <p><strong>新技术</strong></p>
                         </div>
                         <div>
-                            <p>对新的框架/库(Angular/Vue/React)和Node.js等技术一直有关注和了解，但没有实践经验。</p>
+                            <p>对新的框架/库(Angular/Vue/React)和Node.js等技术一直有关注和了解，最近在实践 Vue。</p>
                         </div>
                     </div>
                 </section>
@@ -130,18 +130,17 @@
                 <section class="fe-project">
                     <h2>前端项目(来CDC后)</h2>
                     <div>
-                        <h3>TEG - 安平 - TSRC官网改版(工作) <a href="https://demo.cdc.im/thorliu/TSRC/" target="_blank">demo版本</a> / <a href="https://security.tencent.com/" target="_blank">线上版本</a></h3>
+                        <h3>TEG - 安平 - TSRC官网改版(工作) <a href="https://demo.cdc.im/thorliu/TSRC/" target="_blank">demo版本</a> / <a href="https://security.tencent.com/" target="_blank">线上版本</a>，相关的<a href="">文档页</a>和<a href="">组件页</a></h3>
                         <ul>
                             <li>简述：本人主要负责本次TSRC官网改版的重构工作。(部分页面组件的JS部分经过沟通由配合的开发同学完成)</li>
                         </ul>
-                        <h3>部分 <a href="http://dcloud.oa.com/" target="_blank">设计云</a> 需求(工作)</h3>
+                        <h3>TEG - 安平 - QQ安全中心验证流程改版<a href="https://demo.cdc.im/thorliu/identity-verify/process.html" target="_blank">demo版本</a></h3>
                         <ul>
-                            <li>简述：设计云是CDC研发小组的一款优化设计研发流程的内部产品。</li>
-                            <li>个人参与情况：编写邮件模板、调整页面功能等。这个项目的需求以前端为主，但是本人参与的时间较短(不足一个月)。</li>
+                            <li>简述：</li>
                         </ul>
                         <h3><a href="https://demo.cdc.im/thorliu/process" target="_blank">重构索引表(个人)</a></h3>
                         <ul>
-                            <li>简述：该项目通过读取页面数据生成一张索引表，有利于项目组成员查看重构工作进展。</li>
+                            <li>简述：该项目通过读取页面数据生成一张索引表，有利于项目组成员查看重构工作进展，原生JS编写，用到了部分ES6的特性。</li>
                             <li>功能描述：自定义颜色、根据进度值调整页面相关属性、自动生成二维码、页面预览等。</li>
                         </ul>
                         <!--                             <h3>一套重构工作流(工作/个人)</h3>
@@ -149,12 +148,18 @@
                                 <li>简述：根据业务特点，利用 gulp 及相关插件提高重构效率的一套工作流。</li>
                                 <li>功能描述：</li>
                             </ul> -->
+                        <h3>部分 <a href="http://dcloud.oa.com/" target="_blank">设计云</a> 需求(工作)</h3>
+                        <ul>
+                            <li>简述：设计云是CDC研发小组的一款优化设计研发流程的内部产品。</li>
+                            <li>个人参与情况：编写邮件模板、调整页面功能等。</li>
+                        </ul>
                         <h3>其他(工作)</h3>
                         <ul>
-                            <li>一些H5：<a href="https://demo.cdc.im/thorliu/H5/H5_mid-autumn-send-Q-coins/" target="_blank">中秋运营活动</a> / <a href="https://demo.cdc.im/thorliu/H5/boss_newyear_2016/process.html" target="_blank">总办新春祝福</a></li>
-                            <li><a href="https://demo.cdc.im/thorliu/identity-verify/process.html" target="_blank">TEG - 安平 - QQ安全中心验证流程改版 - 重构页</a></li>
+                            <li>一些H5：<a href="https://demo.cdc.im/thorliu/H5/H5_mid-autumn-send-Q-coins/" target="_blank">中秋运营活动</a> / <a href="https://demo.cdc.im/thorliu/H5/boss_newyear_2016/process.html" target="_blank">总办新春祝福</a> / <a href="https://demo.cdc.im/thorliu/anquan/H5_face_check/"
+                                    target="_blank">TEG - 安平 - 人脸验证</a> / <a href="https://demo.cdc.im/thorliu/anquan/mobile_qq_security_scan/" target="_blank">TEG - 安平 - 手Q安全扫一扫</a> / <a href="https://demo.cdc.im/thorliu/anquan/qq_security_center_moa/" target="_blank">TEG - 安平 - 员工版改密封号</a></li>
                             <li><a href="https://demo.cdc.im/ocean/tml/html/" target="_blank">TEG - 内搜 - 机智2.0 - 重构页</a></li>
-                            <li>一些零碎的走查修改、补充页面的工作。(都是以重构为主)</li>
+                            <li>一些零碎的走查修改、补充页面的工作。</li>
+                            <li>一套围绕 Gulp 搭建的前端工作流，包括</li>
                         </ul>
                     </div>
 
@@ -162,7 +167,7 @@
                     <div>
                         <h3><a href="https://github.com/lzx1022/portfolio-of-lzx" target="_blank">Portfolio of LZX(个人)</a></h3>
                         <ul>
-                            <li>简述：一个用来展示自己作品的静态页面，暂时放在 GitHub Page 上；适配 iPhone；绝大部分页面交互使用原生JS编写。</li>
+                            <li>简述：一个用来展示自己作品的静态页面，暂时放在 GitHub Page 上；适配 iPhone；所有页面交互使用原生JS编写。</li>
                         </ul>
                         <h3><a href="http://portfolio.liuzhexiao.com/html/interview/tencent/demo/" target="_blank">五星标杆(个人)</a></h3>
                         <ul>
@@ -170,7 +175,7 @@
                         </ul>
                         <h3><a href="http://portfolio.liuzhexiao.com/html/web/components/" target="_blank">原生 JS 组件(个人)</a></h3>
                         <ul>
-                            <li>简述：没有依赖的原生 JS 组件库，用来锻炼原生 JS 基础，目前数量不多。</li>
+                            <li>简述：原生 JS 组件库，用来锻炼原生 JS 基础。</li>
                         </ul>
                         <h3>Web for <a href="http://portfolio.liuzhexiao.com/html/web/leo/" target="_blank">Leo</a> / <a href="http://portfolio.liuzhexiao.com/html/web/konsatoshi/" target="_blank">Konsatoshi</a> (均为个人)</h3>
                         <ul>
@@ -257,8 +262,6 @@
                                     <p>90.0分</p>
                                     <p>92.0分</p>
                                     <p>96.0分</p>
-
-
                                     <p>93.0分</p>
 
                                 </div>
@@ -269,7 +272,7 @@
                 <section class="wish">
                     <h2>求职意愿</h2>
                     <div>
-                        来 CDC 后从事的工作主要以重构(HTML+CSS)为主，希望能够谋求一份更加「前端」、更加有挑战的工作，能够更多地锻炼 JS 的能力，甚至包括一些后端知识。
+                        自认为有较强的学习能力和学习欲望，希望可以更多地锻炼 JS 方面的能力，包括一些框架(Vue/React等)的实践以及后端相关的(Node.js)。
                     </div>
                 </section>
 
