--- a/html/about/resume/index.html
+++ b/html/about/resume/index.html
@@ -132,7 +132,7 @@
                     <div>
                         <h3>TEG - 安平 - TSRC官网改版(工作) <a href="https://demo.cdc.im/thorliu/TSRC/" target="_blank">demo版本</a> / <a href="https://security.tencent.com/" target="_blank">线上版本</a>，相关的<a href="">文档页</a>和<a href="">组件页</a></h3>
                         <ul>
-                            <li>简述：本人主要负责本次TSRC官网改版的重构工作。(部分页面组件的JS部分经过沟通由配合的开发同学完成)</li>
+                            <li>简述：本人主要负责本次TSRC官网改版的重构工作。</li>
                         </ul>
                         <h3>TEG - 安平 - QQ安全中心验证流程改版<a href="https://demo.cdc.im/thorliu/identity-verify/process.html" target="_blank">demo版本</a></h3>
                         <ul>
@@ -167,7 +167,7 @@
                     <div>
                         <h3><a href="https://github.com/lzx1022/portfolio-of-lzx" target="_blank">Portfolio of LZX(个人)</a></h3>
                         <ul>
-                            <li>简述：一个用来展示自己作品的静态页面，暂时放在 GitHub Page 上；适配 iPhone；所有页面交互使用原生JS编写。</li>
+                            <li>简述：一个用来展示自己作品的静态页面，暂时放在 GitHub Page 上；适配 iPhone；页面交互使用原生JS编写。</li>
                         </ul>
                         <h3><a href="http://portfolio.liuzhexiao.com/html/interview/tencent/demo/" target="_blank">五星标杆(个人)</a></h3>
                         <ul>
