--- a/html/about/resume/index.html
+++ b/html/about/resume/index.html
@@ -122,7 +122,7 @@
                             <p><strong>新技术</strong></p>
                         </div>
                         <div>
-                            <p>对新的框架/库(Angular/Vue/React)和Node.js等技术一直有关注和了解，最近在实践 Vue。</p>
+                            <p>对新的框架/库(Angular/Vue/React)和Node.js等技术一直有关注和了解，最近在自学 Vue。</p>
                         </div>
                     </div>
                 </section>
