--- a/html/test/qhunter/腾大公开课.html
+++ b/html/test/qhunter/腾大公开课.html
@@ -28,7 +28,7 @@
 }
 </style></head>
 <body class="bg_gray">
-<div style="padding-bottom:51px;">
+<div style="position:absolute;top:0;right:0;left:0;bottom:51px;overflow-y:scroll;-webkit-overflow-scrolling:touch">
 <section class="tx_banner">
     <a href="javascript:;" alt="" title="">
         <img src="./腾大公开课_files/act2_detail.jpg" alt="" title="">
@@ -117,13 +117,13 @@
     </ul>
 </div>
 
+</div>
 <div class="fixed_footer">
     <input type="text" class="yaoqing_code" placeholder="请输入你的邀请码">
     <a href="http://qhunter.tencent.com:8088/register_add.html" class="btn_signup"><i class="icon_signup"></i>报名</a>
 </div>
-</div>
 <!-- 邀请码的弹出层 -->
-<div class="tx_alert" style="position:relative;margin-top:51px;">
+<div class="tx_alert" style="display: none;">
     <div class="popup_content">
         <div class="popup_title">
             <i class="icon_error"></i>
