Upgrade this file

--- a/html/about/index.html
+++ b/html/about/index.html
@@ -68,9 +68,7 @@
                         </li>
                         <!-- <li class="li-icon-social-douban"><a href="https://www.douban.com/people/lzx1022/" target="_blank"></a></li> -->
                         <!-- <li class="li-icon-social-weibo"><a href="http://weibo.com/liuzhexiao1022" target="_blank"></a></li> -->
-                        <li class="li-icon-social-zhihu">
-                            <a href="http://www.zhihu.com/people/lzx1022" target="_blank"></a>
-                        </li>
+                        <!-- <li class="li-icon-social-zhihu"><a href="http://www.zhihu.com/people/lzx1022" target="_blank"></a></li> -->
                     </ul>
                 </section>
             </article>
