--- a/html/about/index.html
+++ b/html/about/index.html
@@ -38,7 +38,7 @@
 
     <main role="main" class="main-about-in">
         <article>
-            <img class="img-portrait" src="../../images/portrait.jpg" title="portrait" alt="portrait">
+            <img class="img-portrait" src="../../images/portrait-2.jpg" title="portrait" alt="portrait">
             <h1>Zhexiao Liu</h1>
             <blockquote>
                 <p>Hangzhou, Zhejiang, China</p>
